-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 15
-
Component/s: core-libs
-
b19
-
x86_64
-
windows_10
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8245390 | 14u-cpu | Yasumasa Suenaga | P3 | Resolved | Fixed | master |
| JDK-8245223 | 14.0.2 | Yasumasa Suenaga | P3 | Closed | Fixed | b07 |
| JDK-8261653 | 13.0.7 | Olga Mikhaltcova | P3 | Resolved | Fixed | b02 |
| JDK-8276221 | 11.0.15-oracle | Harold Seigel | P3 | Resolved | Fixed | b01 |
| JDK-8247627 | 11.0.9-oracle | Henry Jen | P3 | Closed | Not an Issue | |
| JDK-8246680 | 11.0.9 | Yasumasa Suenaga | P3 | Resolved | Fixed | b01 |
(Settings | Time & Language | Language | Administrative language settings | Administrative tab | Language for non-Unicode programs | System locale: X)
(Settings | Time & Language | Regional format | Current format: Y)
For example, jdk15 fails if java path contains German characters and:
System locale: German (Germany)
Current format: English (Europe)
Region: Germany
Active code page: 850
> C:\qwertz-ßüöä\openjdk-15-ea+17_windows-x64\bin\java -version
Error occurred during initialization of VM
Failed setting boot class path.
Previous jdk versions work ok in this case:
> C:\qwertz-ßüöä\openjdk-11+28_windows-x64\bin\java -version
openjdk version "11" 2018-09-25
OpenJDK Runtime Environment 18.9 (build 11+28)
OpenJDK 64-Bit Server VM 18.9 (build 11+28, mixed mode)
> C:\qwertz-ßüöä\openjdk-13+33_windows-x64\bin\java -version
openjdk version "13" 2019-09-17
OpenJDK Runtime Environment (build 13+33)
OpenJDK 64-Bit Server VM (build 13+33, mixed mode, sharing)
> C:\qwertz-ßüöä\openjdk-14+36_windows-x64\bin\java -version
openjdk version "14" 2020-03-17
OpenJDK Runtime Environment (build 14+36-1461)
OpenJDK 64-Bit Server VM (build 14+36-1461, mixed mode, sharing)
Jdk15 and jdk14 fail if java path contains Russian characters and:
System locale: Russian (Russia)
Current format: English (Europe)
Region: Russia
Active code page: 866
> C:\йцукен\openjdk-15-ea+17_windows-x64\bin\java -version
Error occurred during initialization of VM
Failed setting boot class path.
> C:\йцукен\openjdk-14+36_windows-x64\bin\java -version
Error occurred during initialization of VM
Failed setting boot class path.
Old jdk13 and jdk11 versions work ok:
> C:\йцукен\openjdk-11+28_windows-x64\bin\java -version
openjdk version "11" 2018-09-25
OpenJDK Runtime Environment 18.9 (build 11+28)
OpenJDK 64-Bit Server VM 18.9 (build 11+28, mixed mode)
> C:\йцукен\openjdk-13+33_windows-x64\bin\java -version
openjdk version "13" 2019-09-17
OpenJDK Runtime Environment (build 13+33)
OpenJDK 64-Bit Server VM (build 13+33, mixed mode, sharing)
- backported by
-
JDK-8245390 Can't start JVM when java home path includes non-ASCII character
-
- Resolved
-
-
JDK-8246680 Can't start JVM when java home path includes non-ASCII character
-
- Resolved
-
-
JDK-8261653 Can't start JVM when java home path includes non-ASCII character
-
- Resolved
-
-
JDK-8276221 Can't start JVM when java home path includes non-ASCII character
-
- Resolved
-
-
JDK-8245223 Can't start JVM when java home path includes non-ASCII character
-
- Closed
-
-
JDK-8247627 Can't start JVM when java home path includes non-ASCII character
-
- Closed
-
- duplicates
-
JDK-8242608 java.exe does not start with special characters in parent directory names
-
- Closed
-
- relates to
-
JDK-8241461 Can't start JVM when java path includes CJK chars and code-page is English
-
- Closed
-
-
JDK-8191521 handle long relative path specified in -Xbootclasspath/a on windows
-
- Resolved
-
-
JDK-8240197 Cannot start JVM when $JAVA_HOME includes CJK characters
-
- Resolved
-
-
JDK-8242608 java.exe does not start with special characters in parent directory names
-
- Closed
-