8242283: Can't start JVM when java home path includes non-ASCII character

Reviewed-by: naoto, hseigel